added copyright to notebooks

--- a/A3C_workshop_part2.ipynb
+++ b/A3C_workshop_part2.ipynb
@@ -20,6 +20,16 @@
   "cells": [
     {
       "metadata": {
+        "id": "du5kFoxUK9I_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "COPYRIGHT © 2018 Kiran Arun <kironni@gmail.com>"
+      ]
+    },
+    {
+      "metadata": {
         "id": "xoU4YoAO3qfb",
         "colab_type": "text"
       },
@@ -1137,7 +1147,7 @@
       "source": [
         "# if stopped before it saves and stops threads, do this\n",
         "if os.path.exists(os.path.join(run_logdir,\"final_model.ckpt.index\")) != True:\n",
-        "    coord.request_stop()\n",
+        "  COPYRIGHT © 2018 Kiran Arun <kironni@gmail.com>  coord.request_stop()\n",
         "    coord.join(worker_threads)\n",
         "    print('Saving final model...')\n",
         "    saver.save(sess, os.path.join(run_logdir, \"final_model.ckpt\"))"
