added entropy loss equation to documentation

--- a/A3C_workshop_part2.ipynb
+++ b/A3C_workshop_part2.ipynb
@@ -485,7 +485,9 @@
         "- $-\\sum_{t=0}^T\\ln(a_t)d_t$\n",
         "    \n",
         "**Entropy:** this will increase as more of the mass of the action mass function (policy) goes on to one action\n",
-        "- this makes the action probabilities more even, increasing exploration"
+        "- this makes the action probabilities more even, increasing exploration\n",
+        "- with $P_t =$ policy outputs for timestep $t$ (action probabilities)\n",
+        "- $- \\sum_{t=0}^T P_t\\ln(P_t)$"
       ]
     },
     {
@@ -567,9 +569,13 @@
         "                                         activation=None,\n",
         "                                         bias_initializer=None)\n",
         "            \n",
+        "            \n",
+        "            \n",
         "            # for all worker networks\n",
         "            # this will update the global network using the current workers gradients\n",
         "            if scope != 'global':\n",
+        "              \n",
+        "              \n",
         "                \n",
         "                # actions placeholder\n",
         "                self.actions = tf.placeholder(shape=[None], dtype=tf.int32)\n",
@@ -581,6 +587,8 @@
         "                \n",
         "                # get probability values of actions\n",
         "                self.responsible_outputs = tf.reduce_sum(self.policy * self.actions_onehot, [1])\n",
+        "                \n",
+        "                \n",
         "\n",
         "                # Loss functions\n",
         "                \n",
@@ -595,6 +603,8 @@
         "                \n",
         "                # combine losses\n",
         "                self.loss = 0.5 * self.value_loss + self.policy_loss - self.entropy * 0.01\n",
+        "                \n",
+        "                \n",
         "\n",
         "                # get local variables\n",
         "                local_vars = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope)\n",
